# ML-para-extract-2D-transistors

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml  requirements.txt
data/: README.md
demo/: README.md  process_data.py  train_model.py  variable_names.txt
demo/test_forward/: test_forward_0_save-fits.py  test_forward_1_plot-fits.py
demo/test_forward/tmp_matplotlib/: fontlist-v330.json
demo/test_inverse/: test_inverse_0_save-fits.py  test_inverse_1_param-extract.py  test_inverse_2_plot-fits.py
src/transistor_extract/: __init__.py  models.py  utils_misc.py  utils_testing.py  utils_training.py
